# E-CLI

./: LICENSE  README.md  install.sh  pyproject.toml
src/ecli/: main.py
