[tool.poetry]
name = "e-cli"
version = "0.1.0"
description = "E-CLI is an advanced command-line assistant designed to translate natural language queries into executable bash/Zsh commands."
authors = ["Eidan Tzdaka"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ecli", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dspy = ">=2.6.15,<3.0.0"
distro = ">=1.9.0,<2.0.0"

[tool.poetry.scripts]
ecli = "ecli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
